css/main.css
/* Modifying multiple elements */

body, button, code, input, a {
	color: rgb(248, 248, 248);
}

button, code, input {
	background: transparent;
	border: 2px solid rgb(170, 170, 170);
	border-radius: 0.3em;
}

/* Modifying individual elements */

body {
	background-color: rgb(29, 29, 29);
	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
	font-size: xx-large;
	text-align: center;
}

h2 {
	margin-bottom: 0.33em;
}

a:active {
	text-decoration: none;
}

code {
	padding: 0.1%;
}

input {
	padding: 0.15%;
	font-size: x-large;
}

footer {
	position: fixed;
	bottom: 0;
	width: 100%;
}

/* Button */

button {
	padding: 0.1em 0.5em;
	font-size: large;
	margin-top: 0.82em;
}

button:hover {
	background-color: rgb(80, 80, 80);
}

button:active {
	background-color: rgb(51, 51, 51);
}

